--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: done_keyboard
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
+homepage: https://github.com/saithwaleed/done_keyboard
 
 environment:
   sdk: ^3.6.0
